# hr-policy-chatbot-rag

./: .gitignore  pyproject.toml
data/policies/: 01_leave_policy.md  02_compensation_payroll_policy.md  03_code_of_conduct_policy.md  04_performance_management_policy.md  05_recruitment_onboarding_policy.md  qa_dataset.py
notebook/: EXP-1-BASELINE.ipynb  EXP-2-HYBRID.ipynb  EXP-3-QUERY-REWRITE.ipynb  EXP-4-MULTI-QUERY.ipynb  EXP-5-FLASHRANK.ipynb  EXP-6-COMPRESSION.ipynb  EXP-7-METADATA.ipynb  EXP-8-HYDE.ipynb  EXP-9-CROSS-ENCODER.ipynb
