[project]
name = "hr-rag-experiments"
version = "0.1.0"
requires-python = ">=3.10,<3.13"

dependencies = [
    # LangChain (bridge versions)
    "langchain==0.3.10",
    "langchain-core==0.3.25",
    "langchain-community==0.3.10",
    # Gemini
    "langchain-google-genai==2.0.0",
    # vector store
    "faiss-cpu>=1.8.0",
    # embeddings
    "sentence-transformers>=3.0.0",
    # BM25
    "rank-bm25>=0.2.2",
    # evaluation
    "ragas==0.1.10",
    "datasets>=2.20.0",
    # tracking
    "mlflow>=2.14.0",
    "langsmith>=0.1.0",
    # utils
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "notebook>=7.0.0",
    "langchain-groq>=0.2.1",
    "flashrank>=0.2.10",
]
